# AI-powered-documentation-assistant

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: 01_data_ingestion.ipynb  02_retrieval_experiments.ipynb
src/RAG_Pipeline/: data_ingeston.py  retrieval.py  vector_store.py
src/RAG_Pipeline/data_ingestion/: data_ingeston.py
src/RAG_Pipeline/data_ingestion/utils/: chunker.py  clean_markdown_file.py  parser.py  store_chunks_in_vs.py
src/agents/: graph.py  graph_state.py  prompts.py
src/agents/mcp/: tavily_search.py
src/agents/nodes/: agent_nodes.py  assistant_node.py  router_nodes.py  structured_response_node.py  token_check_summarization_node.py
src/agents/sys_prompts/: asistant_sys_prompt.py  conv_summarizer_sys_prompt.py
src/agents/tools/: retrieval_tool.py  tools.py
src/agents/utils/: format_response_regex.py
src/chatbot_ui/: chatbot.py
src/models/: models.py  models_with_tools.py
test_notebooks/: 01_data_ingestion.ipynb  02_retrieval_experiments.ipynb  03_final_retrieval_experimets.ipynb  eval_results.json
